main/staging/namespaces/istio-system/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-fe
spec:
  hosts:
  - "fundhubdev.titanio.xyz"
  gateways:
  - frontend-gateway
  http:
  - name: "fundhub-dev-app"
    route: 
    - destination:
        host: fundhub-client-dev-svc.frontend.svc.cluster.local
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-fe-dashboard
spec:
  hosts:
  - "fundhubdev.dashboard.titanio.xyz"
  gateways:
  - frontend-gateway
  http:
  - name: "fundhub-dev-dashboard"
    route: 
    - destination:
        host: fundhub-dashboard-dev-svc.frontend.svc.cluster.local
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-be
spec:
  hosts:
  - "fundhubdevapi.titanio.xyz"
  gateways:
  - backend-gateway
  http:
  - name: "fundhub-api"
    route: 
    - destination:
        host: fundhub-api-dev-svc.backend.svc.cluster.local
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-grafana
spec:
  hosts:
  - "grafanadev.titanio.xyz"
  gateways:
  - monitoring-gateway
  http:
  - name: "grafana-monitoring"
    route: 
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-weave
spec:
  hosts:
  - "weavedev.titanio.xyz"
  gateways:
  - monitoring-gateway
  http:
  - name: "weave-monitoring"
    route:
    - destination:
        host: ww-gitops-weave-gitops.tools.svc.cluster.local
        port:
          number: 9001
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-kiali
spec:
  hosts:
  - "kialidev.titanio.xyz"
  gateways:
  - monitoring-gateway
  http:
  - name: "kiali-monitoring"
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
